--- a/penguinknight/package.json
+++ b/penguinknight/package.json
@@ -1,5 +1,6 @@
 {
   "name": "penguinknight",
+  "homepage" : "https://lov3tt.github.io/PenguinKnight/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
