--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "super-mario",
+  "name": "penguinknight",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "serve ./public",
-    "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+      "start:prod": "node server.js",
+      "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\" \"serve ./public\"",
+      "client": "cd client && npm run start",
+      "seed": "node scripts/seedDB.js",
+      "install": "cd client && npm install",
+      "build": "cd client && npm run build",
+      "heroku-postbuild": "npm run build"
+    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^4.1.1",
     "serve": "^6.1.0"
   }
 }
