--- a/package.json
+++ b/package.json
@@ -4,14 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "serve ./public",
-    "seed": "node scripts/seedDB.js",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "test": "echo \"Error: no test specified\" && exit 1",
+ 
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +22,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.15.1",
-    "serve": "^6.1.0"
+    "serve": "^6.5.8",
+    "serve-handler": "^6.1.1"
   }
 }
