--- a/app/config/config.json
+++ b/app/config/config.json
@@ -30,15 +30,7 @@
  
     "production": {
  
-        "username": "",
- 
-        "password": null,
- 
-        "database": "",
- 
-        "host": "127.0.0.1",
- 
-        "dialect": "mysql"
+        "use_env_variable": "JAWSDB_URL"
  
     }
  
