--- a/app/config/config.json
+++ b/app/config/config.json
@@ -29,8 +29,10 @@
     },
  
     "production": {
-        "dialect": "mysql",
-        "use_env_variable": "JAWSDB_URL"
+        
+        "use_env_variable": "JAWSDB_URL",
+        
+        "dialect": "mysql"
  
     }
  
