--- a/app/config/config.json
+++ b/app/config/config.json
@@ -36,7 +36,7 @@
  
         "database": "zewnf78ez36qwdmw",
  
-        "host": "127.0.0.1",
+        "host": "icopoghru9oezxh8.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
  
         "dialect": "mysql"
  
