--- a/app/config/config.json
+++ b/app/config/config.json
@@ -6,7 +6,7 @@
  
         "password": "pass",
  
-        "database": "penguinKnight_db",
+        "database": "penguinknight_db",
  
         "host": "127.0.0.1",
  
